# snakemake_workflows

./: .gitignore  README.md  Snakefile  biobakery_all.snakefile  cluster_config.yaml  cluster_template.yaml  config_template.yaml  humann2_run.snakefile  knead_gzip.smk  pyproject.toml  run.smk  run.snakefile  run_all.smk  run_all.snakefile  run_cleanup.smk  run_kneaddata.smk  run_kneaddata.snakefile  run_metaphlan.smk  run_metaphlan.snakefile
.github/ISSUE_TEMPLATE/: blank.md  weekly.yaml  weekly.yml
setup/: directories.smk  directories.snakefile  echo_samples.snakefile  resample_samples.smk  yuka_samples.snakefile
test/: README.md  cluster.yaml  config.yaml  config_template.yaml
workflows/: cleanup.smk  hclust_graphphlan.snakefile  humann.smk  humann.snakefile  humann2.snakefile  kneaddata.smk  kneaddata.snakefile  kneaddata_paired.smk  kneaddata_paired.snakefile  kneaddata_single.smk  kneaddata_single.snakefile  metaphlan.smk  metaphlan.snakefile  metaphlan2.snakefile  strainphlan.snakefile
