[tool.poetry]
name = "snakemake_workflows"
version = "0.1.0"
description = ""
authors = ["VKC Lab Engaging <kbonham@wellesley.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
humann = "^3.0.0"
MetaPhlAn = "^3.0.13"
kneaddata = "^0.10.0"
snakemake = "^6.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
